--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "preentrega1-ruizrivera",
   "version": "0.1.0",
-  "homepage": "https://github.com/rodanprod/proyectofinal",
+  "homepage": "https://rodanprod.github.io/proyectofinal/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
